frontend/css/main.css
/* ... */
.alert {
	border-radius: 2px;
	margin-top: 10px;
	margin-bottom: 10px;
	padding: 8px !important;
	box-sizing: border-box;
}
.alert.info {
	background: #E1F4FC;
	color: black;
	border: 1px solid #0f6082;
}
.alert.success {
	background: #D4ECD2;
	color: black;
	border: 1px solid #87CA81;
}
.alert.warning {
	background: #FFEDBF;
	color: black;
	border: 1px solid #FFC122;
}
.alert.error {
	background: #FBD8DE;
	color: black;
	border: 1px solid #EC5870;
}
.alert > *:first-child {
	margin-top: 0px;
}
.alert > *:last-child {
	margin-bottom: 0px;
}

@media (max-width: 1050px) {
	div.details-abreast {
		flex-wrap: wrap;
	}
	div.details-abreast > div {
		width: 100%;
		overflow: visible;
		padding: 0px;
		margin: 0px;
	}
	.controls {
		flex-wrap: wrap;
	}
}
@media (max-width: 750px) {
	#header {
		justify-content: center;
		flex-direction: column;
		height: 115px;
	}
	#header .separator.space {
		display: none;
	}
	#header > #search-container {
		width: 278px;
		margin-right: 0px;
	}
	#explorer,
	#login {
		display: block;
		height: auto;
		overflow: auto;
	}
	#explorer #explorer-tree,
	#login #login-form {
		width: 100%;
		height: 100%;
		max-width: none;
		min-width: auto;
		border: none;
	}
	#explorer:not(.nosidebar) #explorer-content {
		display: none;
	}
	#login #login-wall {
		display: none;
	}
	#message-container {
		top: 5px;
		right: 0px;
		left: 0px;
		width: auto;
		min-width: auto;
	}
}

@media (prefers-color-scheme: dark) {
	html, #explorer-content {
		background-color: #0d1117;
	}
	#explorer-tree, #login-form, #dialog-container #dialog-box, #header #search-results {
		background-color: #161b22;
		border-color: rgba(255,255,255,0.1);
	}
	#login-bg {
		filter: grayscale(15%) contrast(85%) brightness(70%);
	}
	#login-wall #motd {
		color: rgba(255,255,255,0.75);
	}
	.filler {
		background-color: rgb(255,255,255,0.1);
	}
	#dialog-container.active {
		background-color: rgba(0,0,0,0.45);
	}
	#message-container .message {
		background-color: black;
	}
	#message-container .message .message-title {
		color: white;
	}
	#explorer-tree a:focus,
	#explorer-tree a:hover,
	#explorer-tree a:active,
	#header #search-results a:focus,
	#header #search-results a:hover,
	#header #search-results a:active,
	.blockListItem:focus,
	.blockListItem:hover,
	.blockListItem:active {
		background-color: #30363d;
	}
	#header input:focus {
		color: white;
		background-color: #141414;
	}
	#header input:focus::placeholder {
		color: gray;
	}
	#header #search-glass.focus {
		background-color: white;
	}
	body, a, #header #search-results,
	#explorer-content .details-abreast h1,
	#explorer-content .details-abreast h2,
	#explorer-content .details-abreast h3,
	#explorer-content .gallery h1,
	#explorer-content .gallery h2,
	#explorer-content .gallery h3 {
		color: rgb(233,236,239);
	}
	.inactive {
		color: rgba(233,236,239,0.4);
	}
	code {
		background-color: rgba(22, 27, 34, 0.6);
	}
	code.block {
		border-color: rgba(255,255,255,0.1);
	}
	table.list, .box,
	div.details-abreast > div.stickytable > table.list thead,
	div.details-abreast > div.stickytable > table.list tfoot {
		background-color: #161b22;
	}
	table.list tr th, table.list tr td {
		border-bottom: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr:first-child th,
	table.list tr:first-child td {
		border-top: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr th:first-child,
	table.list tr td:first-child {
		border-left: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr th:last-child,
	table.list tr td:last-child {
		border-right: 1px solid rgba(255,255,255,0.1);
	}
	.box {
		border: 2px solid rgba(255,255,255,0.1);
	}
	button,
	input:not([type=range]):not([type=radio]):not([type=checkbox]), select, textarea {
		color: white;
		background-color: #21262d;
		border-color: rgba(255,255,255,0.1);
		box-shadow: none;
	}
	input:disabled, select:disabled, textarea:disabled, .disabled,
	input:not([type=file]):read-only, textarea:read-only {
		background-color: rgb(240, 240, 240, 0.1);
		background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgb(240, 240, 240, 0.1) 10px, rgb(240, 240, 240, 0.1) 20px);
	}
	button:hover, button:focus,
	input:not([type=range]):not([type=radio]):not([type=checkbox]):focus,
	textarea:focus, select:focus {
		background-color: #30363d;
		box-shadow: none;
	}
	input:not([type=range]):not([type=radio]):not([type=checkbox]):focus,
	textarea:focus, select:focus {
		border-color: rgba(255,255,255,0.2);
	}
	button.primary {
		background-color: #006193;
	}
	button.primary:hover,
	button.primary:focus {
		background-color: #004a70;
	}
	button:disabled {
		color: #484f58 !important;
		background-color: #21262d !important;
	}
	.progressbar-container > .progresstext {
		background: linear-gradient(to right, black var(--progress,0%), white 0);
		-webkit-background-clip: text;
		background-clip: text;
	}
	.progressbar {
		background-color: #324650;
	}
	.progressbar > .progress {
		background-color: #49AFD9;
	}
	.alert.info {
		background: #0D516E;
		color: rgb(233,236,239);
		border: 1px solid rgba(255,255,255,0.2);
	}
	.alert.success {
		background: #377531;
		color: #fff;
		border: 1px solid rgba(255,255,255,0.2);
	}
	.alert.warning {
		background: #A37500;
		color: rgb(233,236,239);
		border: 1px solid rgba(255,255,255,0.2);
	}
	.alert.error {
		background: #AC142C;
		color: rgb(233,236,239);
		border: 1px solid rgba(255,255,255,0.2);
	}
}

@media print {
	#explorer > #explorer-tree, .controls {
		display: none;
	}
	#explorer {
		height: auto;
	}
	#explorer > #explorer-content {
		flex-basis: 100%;
		overflow: auto;
	}
	table.list .sortsymbol::after {
		content: '' !important;
	}
	.noprint {
		display: none !important;
	}
}

